--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "csurf": "^1.11.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "next-csrf": "^0.2.1",
     "next-middleware": "^0.0.1",
     "react": "^18",
     "react-dom": "^18",
